fix: overflow

--- a/liubai-frontends/liubai-web/src/styles/style.css
+++ b/liubai-frontends/liubai-web/src/styles/style.css
@@ -55,8 +55,13 @@ input {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 5px;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
